syntax = "proto3";

package waves.dex.grpc.integration;
option java_package = "com.wavesplatform.dex.grpc.integration.services";

import "waves/transaction.proto";
import "waves/order.proto";
import "waves/amount.proto";
import "google/protobuf/empty.proto";

service WavesBlockchainApi {
    rpc GetStatuses (TransactionsByIdRequest) returns (stream TransactionStatus);

    rpc Broadcast (BroadcastRequest) returns (BroadcastResponse);

    rpc IsFeatureActivated (IsFeatureActivatedRequest) returns (IsFeatureActivatedResponse);

    rpc AssetDescription (AssetIdRequest) returns (AssetDescriptionResponse);

    rpc HasAssetScript (AssetIdRequest) returns (HasScriptResponse);

    rpc RunAssetScript (RunAssetScriptRequest) returns (RunScriptResponse);

    rpc HasAddressScript (HasAddressScriptRequest) returns (HasScriptResponse);

    rpc RunAddressScript (RunAddressScriptRequest) returns (RunScriptResponse);

    rpc SpendableAssetBalance (SpendableAssetBalanceRequest) returns (SpendableAssetBalanceResponse);

    rpc ForgedOrder (ForgedOrderRequest) returns (ForgedOrderResponse);
}

// Common requests

message TransactionsByIdRequest {
    repeated bytes transaction_ids = 1;
}

message AssetIdRequest {
    bytes asset_id = 1;
}

// Common responses

message HasScriptResponse {
    bool has = 1;
}

message RunScriptResponse {
    // empty if there is no script or the script returned TRUE
    oneof result {
        string wrong_input = 1;
        string script_error = 2;
        string unexpected_result = 3;
        Exception exception = 4;
        google.protobuf.Empty denied = 5;
    }
}

// Specific requests and responses

message TransactionStatus {
    enum Status {
        NOT_EXISTS = 0;
        UNCONFIRMED = 1;
        CONFIRMED = 2;
    }

    bytes id = 1;
    Status status = 2;
    int64 height = 3;
}

message BroadcastRequest {
    SignedExchangeTransaction transaction = 1;
}

message BroadcastResponse {
    bool is_valid = 1;
}

message IsFeatureActivatedRequest {
    int32 feature_id = 1;
}

message IsFeatureActivatedResponse {
    bool is_activated = 1;
}

message AssetDescriptionResponse {
    oneof maybe_description {
        AssetDescription description = 1;
    }
}

message AssetDescription {
    bytes name = 1;
    int32 decimals = 2;
    bool has_script = 3; // TODO
}

message RunAssetScriptRequest {
    bytes asset_id = 1;
    SignedExchangeTransaction transaction = 2;
}

message RunAddressScriptRequest {
    bytes address = 1;
    waves.Order order = 2;
}

message HasAddressScriptRequest {
    bytes address = 1;
}

message SpendableAssetBalanceRequest {
    bytes address = 1;
    bytes asset_id = 2;
}

message SpendableAssetBalanceResponse {
    int64 balance = 1;
}

message ForgedOrderRequest {
    bytes order_id = 1;
}

message ForgedOrderResponse {
    bool is_forged = 1;
}

// Other entities

message Exception {
    string name = 1;
    string message = 2;
}

message SignedExchangeTransaction {
    ExchangeTransaction transaction = 1;
    repeated bytes proofs = 2;
}

message ExchangeTransaction {
    int32 chain_id = 1;
    bytes sender_public_key = 2;
    waves.Amount fee = 3;
    int64 timestamp = 4;
    int32 version = 5;

    oneof data {
        waves.ExchangeTransactionData exchange = 107;
    }
}
